infrastructure/services/dev/policies/tests/services-pvcs-routes/cluster.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: cluster
spec:
  crds:
  - ../crds/httproutes.yaml
  resources:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: preview-pr-12
      labels:
        preview.eliorion.fr/tier: preview
        preview.eliorion.fr/pr: '12'
